--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.9",
     "plop": "^4.0.1",
     "prisma": "^5.9.1",
     "swagger-ui-express": "^5.0.0",
