--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - '${SERVER_PORT}:3001'
     depends_on:
       - db
-      - test-db
     develop:
       watch:
         - action: sync
@@ -28,25 +27,12 @@ services:
     restart: unless-stopped
     env_file: .env
     environment:
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DATABASE_DB}
+      - DATABASE_URL=${DATABASE_URL}
       - PGDATA=/var/lib/postgresql/data/pgdata
     ports:
       - '${DATABASE_PORT}:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
-
-  test-db:
-    image: postgres
-    container_name: ${PROJECT_NAME}-test-db
-    env_file: .env
-    environment:
-      - POSTGRES_USER=${DATABASE_TEST_USER}
-      - POSTGRES_PASSWORD=${DATABASE_TEST_PASSWORD}
-      - POSTGRES_DB=${DATABASE_TEST_DB}
-    ports:
-      - '${DATABASE_TEST_PORT}:5432'
 
 volumes:
   pgdata:
