--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
     ports:
       - '${DATABASE_PORT}:5432'
     volumes:
