--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@swc/cli": "^0.3.6",
     "@swc/core": "^1.3.107",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
