feat(comments): implemented comment CRUD

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -22,7 +22,7 @@ services:
           path: package.json
 
   db:
-    image: postgres
+    image: postgres:16
     container_name: ${PROJECT_NAME}-db
     restart: unless-stopped
     env_file: .env
