--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -35,6 +35,23 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  test-db:
+    image: postgres
+    container_name: ${PROJECT_NAME}-test-db
+    env_file: .env
+    environment:
+      - POSTGRES_USER=${DATABASE_TEST_USER}
+      - POSTGRES_PASSWORD=${DATABASE_TEST_PASSWORD}
+      - POSTGRES_DB=${DATABASE_TEST_DB}
+    ports:
+      - '${DATABASE_TEST_PORT}:5432'
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${DATABASE_TEST_USER}']
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+
 volumes:
   pgdata:
   node_modules:
