--- a/server/package.json
+++ b/server/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^2.1.0",
     "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
     "prisma": "^6.3.1",
     "prisma-dbml-generator": "^0.10.0",
     "supertest": "^6.3.4",
