--- a/server/package.json
+++ b/server/package.json
@@ -56,7 +56,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "20.11.16",
@@ -77,6 +77,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^2.1.0",
     "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
     "prisma-dbml-generator": "^0.10.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
