--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,22 +1,15 @@
 {
-  "name": "Next.js Boilerplate",
-  "short_name": "Next.js Boilerplate",
+  "name": "bookworms",
   "icons": [
     {
-      "src": "/img/icon-192.png",
+      "src": "/img/worm.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "/img/icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "background_color": "#FFFFFF",
-  "description": "Next.js Boilerplate",
+  "description": "bookworms - a social platform for book lovers",
   "display": "fullscreen",
   "start_url": "/",
-  "theme_color": "#06092B",
-  "favicon": "/img/icon-192.png"
+  "theme_color": "#06092B"
 }
