--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.15",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -30,6 +31,7 @@
     "@radix-ui/themes": "^2.0.3",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.5",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cssnano": "^7.0.4",
@@ -54,7 +56,10 @@
     "@next/eslint-plugin-next": "^14.0.4",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "4.19.6",
     "@types/jest": "^29.5.11",
+    "@types/next-auth": "^3.15.0",
     "@types/react": "^18.3.18",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
