--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-hook-use-form": "^1.2.0",
+    "react-toastify": "^11.0.5",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
