--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@radix-ui/themes": "^2.0.3",
     "@svgr/webpack": "^8.1.0",
@@ -42,13 +43,14 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
-    "react-day-picker": "^9.6.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-hook-use-form": "^1.2.0",
     "react-toastify": "^11.0.5",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
